# Generate_Diff

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  python-package.yml  testing.yml
gendiff/: __init__.py  cli.py
gendiff/engine/: compare.py  differ.py  engine.py  gendiff.py  parser.py  parsing.py
gendiff/formats/: constants.py  edit_message.py  json.py  plain.py  stylish.py  var.py
gendiff/scripts/: gendiff.py
test/: constants.py  test_all.py  test_json.py  test_yaml.py
test/fixtures/: diff_json.txt  test_file_json.txt  test_file_yaml.txt  test_json_json.txt
test/fixtures/examples/: file2.yaml
