[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Nidenai <dimsknz@gmail.com>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


[tool.poetry.dependencies]
python = "^3.8"
pyyml = "^0.0.2"
coverage = "^6.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
wemake-python-styleguide = "^0.15.2"
coverage = "^6.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


